--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -2,7 +2,7 @@
   <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
 </p>
 <div class="jumbotron">
-  <p>Search for a movie using the form below</p>
+  <p>Searches fojknm,kmnmr a movie using the form below</p>
   <form>
     <div class="form-group">
       <div class="input-group">
@@ -20,7 +20,7 @@
   </form>
 </div>
 <div>
-  <h3 class="orange-text">Search Results</h3>
+  <h3 class="orange-text">Search asdasd</h3>
   <div *ngIf="searchRes" class="row is-flex">
     <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6" *ngFor="let movie of searchRes; let i = index;">
       <movie-card [movie]="movie"></movie-card>
